Prevent zoom on input boxes on iphone

--- a/css/main.css
+++ b/css/main.css
@@ -58,3 +58,11 @@
   color: #ccc;
   font-size: 13px;
 }
+
+input[type=text],
+input[type=phone],
+input[type=email],
+input[type=password],
+textarea {
+  font-size: 16px !important;
+}
